Closed
Bug 384208
Opened 18 years ago
Closed 18 years ago
svg:pattern goes haywire when object rotated
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: djpnewton, Assigned: jtd)
References
(Depends on 1 open bug)
Details
Attachments
(7 files, 2 obsolete files)
|
1.20 KB,
image/svg+xml
|
Details | |
|
46.63 KB,
image/png
|
Details | |
|
30.77 KB,
image/png
|
Details | |
|
5.09 KB,
image/svg+xml
|
Details | |
|
1.05 KB,
image/svg+xml
|
Details | |
|
1.05 KB,
image/svg+xml
|
Details | |
|
13.89 KB,
patch
|
longsonr
:
review+
roc
:
superreview+
roc
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070611 Minefield/3.0a6pre
Build Identifier:
I have a simple pattern that gets distorted when the object using the pattern is rotated.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
| Reporter | ||
Comment 1•18 years ago
|
||
| Reporter | ||
Comment 2•18 years ago
|
||
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → jdaggett
| Assignee | ||
Comment 3•18 years ago
|
||
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a7pre) Gecko/2007080304 Minefield/3.0a7pre
| Assignee | ||
Updated•18 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Updated•18 years ago
|
OS: Windows XP → All
Hardware: PC → All
| Assignee | ||
Comment 4•18 years ago
|
||
| Assignee | ||
Comment 5•18 years ago
|
||
| Assignee | ||
Comment 6•18 years ago
|
||
Comment 8•18 years ago
|
||
Does the testcase in bug 377399 comment 1 still display OK?
(In reply to comment #8)
> Does the testcase in bug 377399 comment 1 still display OK?
Yes.
Comment 10•18 years ago
|
||
Attachment #279988 -
Attachment is obsolete: true
| Assignee | ||
Comment 11•18 years ago
|
||
Looks like this patch also fixes bug 391620, scaled patterns not rendered at device resolution.
Comment 12•18 years ago
|
||
(In reply to comment #11)
> Looks like this patch also fixes bug 391620, scaled patterns not rendered at
> device resolution.
>
In that case we need to do this for masks too, although not necessarily in this bug.
Comment 13•18 years ago
|
||
Scrolling doesn't work with this patch.
| Assignee | ||
Comment 14•18 years ago
|
||
Scrolling appears broken in general right now. See bug 389498.
Comment 15•18 years ago
|
||
(In reply to comment #14)
> Scrolling appears broken in general right now. See bug 389498.
>
AFAIK that only applies to masks.
Comment 16•18 years ago
|
||
This version seems to work with all the testcases I've tried. If you find somewhere it breaks, please let me know.
Attachment #280080 -
Attachment is obsolete: true
Attachment #281248 -
Flags: review?(longsonr)
Updated•18 years ago
|
Attachment #281248 -
Flags: review?(longsonr) → review+
Attachment #281248 -
Flags: superreview?(roc)
Attachment #281248 -
Flags: superreview?(roc) → superreview+
Comment 17•18 years ago
|
||
Comment on attachment 281248 [details] [diff] [review]
scrolling working
Low risk patch that greatly improves the correctness of <svg:pattern>.
Attachment #281248 -
Flags: approval1.9?
Attachment #281248 -
Flags: approval1.9? → approval1.9+
Comment 18•18 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•