Bug 384208 - svg:pattern not correct for general transforms. r=longsonr, sr+a=roc